name:                cbor-tool
version:             0
synopsis:            CBOR deserialization tool
description:         Please see README.md
homepage:            https://github.com/fumieval/cbor-tool
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          fumiexcel@gmail.com
copyright:           Copyright (c) 2016 Fumiaki Kinoshita
category:            Compilers/Interpreters
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable cbor-tool
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , binary-serialise-cbor
                     , time
                     , text
                     , bytestring
                     , directory
                     , lens
                     , ansi-terminal
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fumieval/cbor-tool
